# CTF-Challenges

./: README.md
BYUctf/my_work/Are S A/: Are S A - crypto.md  (+1 more)
CSCG/2024/: README.md
cscg/2024/: README.md
openecsc/: disk.img  exploit.py  lwe2048.py
openecsc/juniorfeistel/: exploit.py  exploit.py.bck  input.py  juniorfeistel.cpp  one_round  out.txt  test.cpp  test.py
openecsc/lazyDH/: exploit.py  flag.txt  lazydh.py  lazydh.txt  lazydh.txt2
openecsc/log4x86/: docker-compose.yml
rumblectf/authserver/: exploit.py
rumblectf/bigger-is-better/: exploit.py  gen.py  notes.txt
rumblectf/torope/: Dockerfile  client.py  docker-compose.yml  exploit.py  main.py  messages.py  modclient.py  server.py  util.py
rumblectf/unpickler/: Dockerfile  chall.py  docker-compose.yml  pickle.txt  socat.sh  stacksmash.txt  test.py
rumblectf/yet-another-obfuscator-1/: Dockerfile  docker-compose.yaml  flag.txt
rumblectf/yet-another-obfuscator-2/: Cargo.toml  docker-compose.yaml  flag.txt
rumblectf/yet-another-obfuscator-2/src/: garble.rs  hashable.rs  main.rs  rng.rs
tasks/bank/: vuln.c
tasks/bulb/: logs
tasks/can-i-haz-lolpython/: apache-config.conf
tasks/choose-your-own/: run.sh
tasks/flipnote/: vuln.c
tasks/haunted/: Dockerfile  OVMF_CODE.fd  disk.img  server.py
tasks/intro-crypto-3/: msg.txt
tasks/intro-pwn-1/: Dockerfile
tasks/jpgxl/: flag.jxl
tasks/mastodont/: .env.production
tasks/misfortune/: Dockerfile  inventory.yml  playbook.yml
tasks/njs/: Dockerfile  join.js
tasks/threads/: Dockerfile  run.sh
tasks/wsbx/: Dockerfile  package-lock.json
(+266 files in other folders)
