[package]
name = "yao"
version = "1.0.0"
edition = "2021"


[dependencies]
aes = "0.8.4"
bincode = "1.3.3"
kctf-pow = "1.2.0"
num-bigint-dig = {version = "0.8.4", features = ["rand"]}
rand = "0.8.5"
rand_chacha = "0.3.1"
rsa = {version = "0.9.6", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }
sha2 = "0.10.8"
